**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed:
- gam performance iteration (1.8-19, Sept 2017)
- argument 'pers' in plot.gam (1.8-23, Nov 2017)

Issues: t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 


1.8-24

* 'mrf' smooth documentation modified to make it clearer how to specify 'nb',
  and code modified so that it is now possible to speficy the neighbour 
  structure using names rather than indices.

* 'bfgs' fix to handle extended families.

* plot.gam modified to only prompt (via devAskNewPage) for a new page after 
  the first page is used up.

* export 'k.check'.

* Fix to 'Rrank'. Previously a matrix R with more columns than rows could 
  cause a segfault. 

* Fix to non-finite likelihood handling in gam.fit5.

1.8-23

* default plot methods added for smooths of 3 and 4 variables. 

* The `gamma' control parameter for gam and bam can now be used with RE/ML
  smoothness selection, not just GCV/AIC. Essentially smoothing parameters
  are chosen as if the sample size was n/gamma instead of n.

* The "bs" basis now allows multiple penalties of different orders on the same
  spline. e.g. s(x,bs="bs",m=c(3,2,0)). See ?b.spline.  

* bam(...,discrete=TRUE) can now use the smooth 'id' mechanism to link 
  smoothing parameters, but note the method constraint that the linked bases 
  are not forced to be identical in this case (unlike other fitting methods).

* summary.gam now allows random effects tests to be skipped (in some large
  models the test is costly and uninteresting).

* 'interpret.gam0' modified so that masked 's', 'te', etc from other packages 
  does not cause failure.

* coxph fix of prediction bug introduced with stratified model (thanks
  Giampiero Marra)
	
* bam(...,discrete=TRUE) fix to handle nested matrix arguments to smooths.
